Downgrade java version to 8